NewMessage UI - Remove selected recipients from dropdown options FMSG-34 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -39,6 +39,7 @@ label.message.created = Created
 label.message.locale = Content Locales
 label.message.locale.preferred = Preferred Locale
 label.message.replyTo = Reply to
+label.message.selectedRecipients.placeholder = Select Recipient(s)...
 label.message.sender = Sender
 label.message.sender.name = Sender Name
 label.message.sender.address = Sender Address
