--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -38,6 +38,7 @@ label.message.ccs = Destinatários (Cc)
 label.message.created = Criado
 label.message.locale = Localizações do Conteúdo
 label.message.replyTo = Responder para
+label.message.selectedRecipients.placeholder = Escolher Destinatário(s)...
 label.message.sender = Remetente
 label.message.sender.name = Nome do Remetente
 label.message.sender.address = Endereço do Remetente
