Redesign OptInConfig interface FMSG-41 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -12,12 +12,15 @@ action.remove = Remove
 action.reset.template = Restore Defaults
 action.save = Save
 action.view = View Details
+action.subscribe = Subscribe
+action.unsubscribe = Unsubscribe
 
 error.message.not.sent = Message could not be sent:
 error.template.not.saved = Message template could not be saved:
 error.template.undeclared = Message template is undeclared.
 error.sender.not.saved = Sender configuration could not be saved:
 
+help.optInConfig = Select the entities to whom you give permission to communicate with you via email.
 hint.email = someone@example.com
 hint.email.list = someone@example.com, ...
 hint.group.expression = Group Expression
@@ -62,7 +65,7 @@ label.sender.html = HTML Sending
 label.sender.members = Member Group Expression
 label.sender.name = Name
 label.sender.optInRequired = Opt In Confirmation Required
-label.sender.optInStatus = Opted In Status
+label.sender.optInStatus = Subscribed
 label.sender.policy = Message Storage Policy
 label.sender.policy.all = All
 label.sender.policy.amount = At most:
@@ -87,9 +90,7 @@ title.message = Message
 title.message.new = New Message
 title.messages = Messages
 title.messaging = Messaging System
-title.messaging.optInConfig = Opt In Configuration
-title.messaging.optInConfig.defaultSenders = Mandatory Senders
-title.messaging.optInConfig.optInRequiredSenders = Optional Senders
+title.messaging.optInConfig = Subscriptions
 title.messaging.senders = Sender Configuration
 title.messaging.sending = Message Sending
 title.messaging.templates = Template Configuration
