--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -18,6 +18,7 @@ error.template.not.saved = Modelo de mensagem não pode ser guardado:
 error.template.undeclared = Modelo de mensagem não foi declarado.
 error.sender.not.saved = Configuração de Remetente não pode ser guardada:
 
+help.optInConfig = Selecione as entidades a quem dá permissão para comunicarem consigo via email.
 hint.email = alguem@exemplo.pt
 hint.email.list = alguem@exemplo.pt, ...
 hint.group.expression = Fórmula de Grupo
@@ -61,7 +62,7 @@ label.sender.html = Envio de HTML
 label.sender.members = Expressão do Grupo de Membros
 label.sender.name = Nome
 label.sender.optInRequired = Confirmação de Permissões de Envio Obrigatória
-label.sender.optInStatus = Permitido
+label.sender.optInStatus = Subscrito
 label.sender.policy = Política de Preservação de Mensagens
 label.sender.policy.all = Todas
 label.sender.policy.amount = No máximo:
@@ -86,9 +87,7 @@ title.message = Mensagem
 title.message.new = Nova Mensagem
 title.messages = Mensagens
 title.messaging = Sistema de Mensagens
-title.messaging.optInConfig = Permissões de Envio de Mensagens
-title.messaging.optInConfig.defaultSenders = Remetentes Obrigatórios
-title.messaging.optInConfig.optInRequiredSenders = Remetentes Opcionais
+title.messaging.optInConfig = Subscrições
 title.messaging.senders = Configuração de Remetentes
 title.messaging.sending = Envio de Mensagens
 title.messaging.templates = Configuração de Modelos de Mensagem
