Update OptedOutGroup using OptInConfig interface FMSG-42 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -53,6 +53,7 @@ label.message.status.sent = Sent
 label.message.sent.by = Sent by
 label.message.subject = Subject
 label.message.tos = Recipients (To)
+label.messaging.globalOptOut.question = Do you want to receive any emails from any unit, department or the Fenixedu system?
 label.no = No
 label.of = of
 label.off = Off
