--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -50,6 +50,7 @@ label.message.status.sent = Enviado
 label.message.sent.by = Enviado por
 label.message.subject = Assunto
 label.message.tos = Destinatários (To)
+label.messaging.globalOptOut.question = Pretende receber emails por parte de qualquer unidade, departamento ou do sistema Fenixedu?
 label.no = Não
 label.of = de
 label.off = Off
