Sort Senders listing by most recently used FMSG-45 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -74,6 +74,7 @@ label.sender.policy.none = None
 label.sender.policy.period = For period:
 label.sender.recipients = Recipients
 label.sender.replyTo = Reply to
+label.sender.lastMessageSent = Last Message Sent
 label.show = show
 label.template.description = Description
 label.template.id = Key
