--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -104,4 +104,5 @@ title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
 title.template.edit = Editar Modelo de Mensagem
 label.message.attachments=Anexos
+label.sender.lastMessageSent=Última Mensagem Enviada
 
