With great power comes great responsibility FMSG-46 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -15,6 +15,9 @@ action.view = View Details
 action.subscribe = Subscribe
 action.unsubscribe = Unsubscribe
 
+disclaimer.non.optin.required.sender.selected = The currently selected sender is a non opt-in required sender, which means that all messages sent by this sender will reach all members of the selected recipients.
+title.disclaimer.non.optin.required.sender.selected = Disclaimer - Non Opt-In Required Sender Selected
+
 error.message.not.sent = Message could not be sent:
 error.template.not.saved = Message template could not be saved:
 error.template.undeclared = Message template is undeclared.
