--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -104,4 +104,6 @@ title.templates.config = Configuração de Modelos de Mensagem
 title.template = Modelo de Mensagem
 title.template.edit = Editar Modelo de Mensagem
 label.message.attachments=Anexos
+disclaimer.non.optin.required.sender.selected = O remetente selecionado não requer subscrição, o que signfica que todas as mensagens enviadas por este remetente irão chegar a todos os membros dos destinatários selecionados.
+title.disclaimer.non.optin.required.sender.selected = Disclaimer - Remetente Selecionado Não Requer Subscrição
 
