Ensure resource bundles loading in UTF-8 FMSG-56 #resolve

--- a/messaging-core/src/main/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/resources/MessagingResources_en.properties
@@ -1,3 +1,4 @@
+# 🔥🔥🔥🔥🔥 This comment is here to force utf-8 🔥🔥🔥🔥🔥
 error.bootstrapper.systemsender.address.empty = Sender address is required.
 error.bootstrapper.systemsender.address.invalid = Sender address is not valid.
 error.bootstrapper.systemsender.group.empty = Sender group is required.
