--- a/messaging-core/src/main/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/resources/MessagingResources_pt.properties
@@ -1,62 +1,63 @@
-error.bootstrapper.systemsender.address.empty = Endereço do remetente é necessário.
-error.bootstrapper.systemsender.address.invalid = Endereço do remetente não é válido.
-error.bootstrapper.systemsender.group.empty = Grupo de envio é necessário.
-error.bootstrapper.systemsender.group.invalid = Expressão do grupo de envio não é válida.
-error.bootstrapper.systemsender.name.empty = Nome do remetente é necessário.
-error.message.validation.file.forbidden=O utilizador atual não tem permissões de acesso para o anexo: {0}
-error.message.validation.html.forbidden = Este remetente não está autorizado a enviar mensagens HTML.
-error.message.validation.message.empty = Corpo da mensagem é necessário.
-error.message.validation.recipient.single.invalid = Endereço de e-mail não é válido: {0}.
-error.message.validation.recipient.token.erroneous = A autorização do remetente para um dos recipientes selecionados não pôde ser validada.
-error.message.validation.recipient.token.expired = A autorização do remetente para um dos recipientes selecionados expirou.
-error.message.validation.recipients.empty = É necessário pelo menos um destinatário.
-error.message.validation.sender.empty = Remetente é necessário.
-error.message.validation.sender.user.forbidden = Utilizador actual não pode utilizar o remetente escolhido.
-error.message.validation.subject.empty = Assunto é necessário.
-error.not.authorized = Não tem permissões para ver esta página
-error.sender.validation.address.empty = Endereço do remetente é obrigatório.
-error.sender.validation.address.invalid = Endereço do remetente inválido.
-error.sender.validation.attachmentsEnabled.required=Permissão de carregamento de anexos é obrigatória.
-error.sender.validation.html.required = Permissão de envio de HTML é obrigatória.
-error.sender.validation.members.empty = Expressão de grupo de membros é obrigatória.
-error.sender.validation.members.invalid = Expressão de grupo de membros inválida.
-error.sender.validation.name.empty = Nome é obrigatório.
-error.sender.validation.policy.empty = Política de preservação de mensagens é obrigatória.
-error.sender.validation.policy.invalid = Política de preservação de mensagens inválida.
-error.sender.validation.recipient.invalid = Recipiente inválido: {0}.
-error.sender.validation.replyTo.invalid = Endereço de resposta inválido.
-error.template.malformed = Não foi possível compilar a template de mensagem com id "{0}".
+# ğŸ”¥ğŸ”¥ğŸ”¥ğŸ”¥ğŸ”¥ This comment is here to force utf-8 ğŸ”¥ğŸ”¥ğŸ”¥ğŸ”¥ğŸ”¥
+error.bootstrapper.systemsender.address.empty = EndereÃ§o do remetente Ã© necessÃ¡rio.
+error.bootstrapper.systemsender.address.invalid = EndereÃ§o do remetente nÃ£o Ã© vÃ¡lido.
+error.bootstrapper.systemsender.group.empty = Grupo de envio Ã© necessÃ¡rio.
+error.bootstrapper.systemsender.group.invalid = ExpressÃ£o do grupo de envio nÃ£o Ã© vÃ¡lida.
+error.bootstrapper.systemsender.name.empty = Nome do remetente Ã© necessÃ¡rio.
+error.message.validation.file.forbidden=O utilizador atual nÃ£o tem permissÃµes de acesso para o anexo: {0}
+error.message.validation.html.forbidden = Este remetente nÃ£o estÃ¡ autorizado a enviar mensagens HTML.
+error.message.validation.message.empty = Corpo da mensagem Ã© necessÃ¡rio.
+error.message.validation.recipient.single.invalid = EndereÃ§o de e-mail nÃ£o Ã© vÃ¡lido: {0}.
+error.message.validation.recipient.token.erroneous = A autorizaÃ§Ã£o do remetente para um dos recipientes selecionados nÃ£o pÃ´de ser validada.
+error.message.validation.recipient.token.expired = A autorizaÃ§Ã£o do remetente para um dos recipientes selecionados expirou.
+error.message.validation.recipients.empty = Ã‰ necessÃ¡rio pelo menos um destinatÃ¡rio.
+error.message.validation.sender.empty = Remetente Ã© necessÃ¡rio.
+error.message.validation.sender.user.forbidden = Utilizador actual nÃ£o pode utilizar o remetente escolhido.
+error.message.validation.subject.empty = Assunto Ã© necessÃ¡rio.
+error.not.authorized = NÃ£o tem permissÃµes para ver esta pÃ¡gina
+error.sender.validation.address.empty = EndereÃ§o do remetente Ã© obrigatÃ³rio.
+error.sender.validation.address.invalid = EndereÃ§o do remetente invÃ¡lido.
+error.sender.validation.attachmentsEnabled.required=PermissÃ£o de carregamento de anexos Ã© obrigatÃ³ria.
+error.sender.validation.html.required = PermissÃ£o de envio de HTML Ã© obrigatÃ³ria.
+error.sender.validation.members.empty = ExpressÃ£o de grupo de membros Ã© obrigatÃ³ria.
+error.sender.validation.members.invalid = ExpressÃ£o de grupo de membros invÃ¡lida.
+error.sender.validation.name.empty = Nome Ã© obrigatÃ³rio.
+error.sender.validation.policy.empty = PolÃ­tica de preservaÃ§Ã£o de mensagens Ã© obrigatÃ³ria.
+error.sender.validation.policy.invalid = PolÃ­tica de preservaÃ§Ã£o de mensagens invÃ¡lida.
+error.sender.validation.recipient.invalid = Recipiente invÃ¡lido: {0}.
+error.sender.validation.replyTo.invalid = EndereÃ§o de resposta invÃ¡lido.
+error.template.malformed = NÃ£o foi possÃ­vel compilar a template de mensagem com id "{0}".
 
-hint.bootstrapper.systemsender.group = Membros são autorizados a usar o remetente de sistema através da interface de envio de mensagens
+hint.bootstrapper.systemsender.group = Membros sÃ£o autorizados a usar o remetente de sistema atravÃ©s da interface de envio de mensagens
 
-label.bootstrapper.systemsender.address = Endereço
+label.bootstrapper.systemsender.address = EndereÃ§o
 label.bootstrapper.systemsender.group = Grupo de Envio
 label.bootstrapper.systemsender.name = Nome
 label.messaging.group.senders = Remetentes
 
-message.template.message.wrapper.description = Envolve mensagens institucionais enviadas através da interface de envio de mensagens.
+message.template.message.wrapper.description = Envolve mensagens institucionais enviadas atravÃ©s da interface de envio de mensagens.
 message.template.message.wrapper.html = {{htmlBody.getContent(locale) | default(htmlBody.getContent(preferredLocale)) | default(htmlBody.content)}}
 message.template.message.wrapper.parameter.bccs =  Lista dos recipientes BCC da mensagem.
 message.template.message.wrapper.parameter.ccs = Lista dos recipientes CC da mensagem.
 message.template.message.wrapper.parameter.creator = O utilizador que criou a mensagem.
-message.template.message.wrapper.parameter.htmlBody = O conteúdo HTML da mensagem.
-message.template.message.wrapper.parameter.preferredLocale = A localização preferida para o conteúdo da mensagem.
-message.template.message.wrapper.parameter.replyTo = O endereço de resposta da mensagem.
+message.template.message.wrapper.parameter.htmlBody = O conteÃºdo HTML da mensagem.
+message.template.message.wrapper.parameter.preferredLocale = A localizaÃ§Ã£o preferida para o conteÃºdo da mensagem.
+message.template.message.wrapper.parameter.replyTo = O endereÃ§o de resposta da mensagem.
 message.template.message.wrapper.parameter.sender = O remetente da mensagem.
-message.template.message.wrapper.parameter.singleBccs = Lista dos endereços de email dos recipientes BCC individuais da mensagem.
-message.template.message.wrapper.parameter.singleTos = Lista dos endereços de email dos recipientes TO individuais da mensagem.
+message.template.message.wrapper.parameter.singleBccs = Lista dos endereÃ§os de email dos recipientes BCC individuais da mensagem.
+message.template.message.wrapper.parameter.singleTos = Lista dos endereÃ§os de email dos recipientes TO individuais da mensagem.
 message.template.message.wrapper.parameter.subject = O assunto da mensagem.
-message.template.message.wrapper.parameter.textBody = O conteúdo textual simples da mensagem.
+message.template.message.wrapper.parameter.textBody = O conteÃºdo textual simples da mensagem.
 message.template.message.wrapper.parameter.tos = Lista dos recipientes To da mensagem.
 message.template.message.wrapper.subject = {{subject.getContent(locale) | default(subject.getContent(preferredLocale)) | default(subject.content)}}
-message.template.message.wrapper.text = {{textBody.getContent(locale) | default(textBody.getContent(preferredLocale)) | default(textBody.content)}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender.name}}{% if bccs is not empty %}, para os seguintes destinatários:{% for bcc in bccs | sort %}\n\n\t{{bcc.presentationName}}{% endfor %}{% else %}.{% endif %}
+message.template.message.wrapper.text = {{textBody.getContent(locale) | default(textBody.getContent(preferredLocale)) | default(textBody.content)}}\n\n---\nEsta mensagem foi enviada em nome do(a) {{sender.name}}{% if bccs is not empty %}, para os seguintes destinatÃ¡rios:{% for bcc in bccs | sort %}\n\n\t{{bcc.presentationName}}{% endfor %}{% else %}.{% endif %}
 
 name.storage.policy = Manter
 name.storage.policy.all = todas
-name.storage.policy.amount = até {0} mensagens
+name.storage.policy.amount = atÃ© {0} mensagens
 name.storage.policy.none = nenhuma
 name.storage.policy.period = durante {0}
 
 title.bootstrapper = Sistema de Mensagens
 title.bootstrapper.systemsender = Remetente de Sistema
-title.bootstrapper.systemsender.description = Configuração do remetente das mensagens de sistema
+title.bootstrapper.systemsender.description = ConfiguraÃ§Ã£o do remetente das mensagens de sistema
