send button enabled if fields are filled FMSG-57 #resolve

--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_en.properties
@@ -110,3 +110,4 @@ title.senders.others = Other Senders
 title.templates.config = Message Template Configuration
 title.template = Message Template
 title.template.edit = Edit Message Template
+label.message.send.confirmation=Are you sure you want to send this message ?
