--- a/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
+++ b/messaging-core/src/main/webapp/WEB-INF/resources/MessagingResources_pt.properties
@@ -107,4 +107,5 @@ label.message.attachments=Anexos
 disclaimer.non.optin.required.sender.selected = O remetente selecionado não requer subscrição, o que signfica que todas as mensagens enviadas por este remetente irão chegar a todos os membros dos destinatários selecionados.
 title.disclaimer.non.optin.required.sender.selected = Disclaimer - Remetente Selecionado Não Requer Subscrição
 label.sender.lastMessageSent=Última Mensagem Enviada
+label.message.send.confirmation=Tem a certeza que deseja enviar a mensagem ?
 
